More formatting changes - I hate CSS

--- a/_testcontracts/2011-JPM.md
+++ b/_testcontracts/2011-JPM.md
@@ -1,13 +1,9 @@
 ---
     contracts:
-    - when: 2011–2012 JPMorgan
-      role: System Integration and Test Engineer — Futures and Options
-    - when: 2010–2011 JPMorgan
-      role: System Integration and Test Engineer — Futures and Options
-    - when: 2006–2009 JPMorgan
-      role: System Integration and Test Engineer — Futures and Options
-    - when: 2000–2003 JPMorgan
-      role: System Integration and Test Engineer — Futures and Options
+    - 2011–2012 JPMorgan, System Integration and Test Engineer — Futures and Options
+    - 2010–2011 JPMorgan, System Integration and Test Engineer — Futures and Options
+    - 2006–2009 JPMorgan, System Integration and Test Engineer — Futures and Options
+    - 2000–2003 JPMorgan, System Integration and Test Engineer — Futures and Options
     skills:
     - Perl, Ksh, Bash.
     - Sungard Valdi Trader suite, GLWin, GLAPI.
