--- a/_testjobs/2013-ttp.md
+++ b/_testjobs/2013-ttp.md
@@ -1,6 +1,5 @@
 ---
-when: 2013–2015 The Test People
-role: Senior Test Consultant
+role: 2013–2015 The Test People, Senior Test Consultant
 skills:
     - Selenium Webdriver.
     - Java, Python, Bash.
