All Jobs Together

--- a/_testjobs/2011-JPM.md
+++ b/_testjobs/2011-JPM.md
@@ -1,4 +1,5 @@
 ---
+    type: contract
     contracts:
     - 2011–2012 JPMorgan, System Integration and Test Engineer — Futures and Options
     - 2010–2011 JPMorgan, System Integration and Test Engineer — Futures and Options
