--- a/_testjobs/1997-THL.md
+++ b/_testjobs/1997-THL.md
@@ -2,4 +2,6 @@
 type: permanent
 role: 1997–2013 Tony Holroyd Limited, Contractor
 ---
-See Contracts section
+See [Contracts][1] section
+
+[1]: #contracts "Contracts worked"
