--- a/_testjobs/1997-THL.md
+++ b/_testjobs/1997-THL.md
@@ -1,6 +1,8 @@
 ---
 type: permanent
-role: 1997–2013 Tony Holroyd Limited, Contractor
+who:  Tony Holroyd Limited
+when: 1997–2013
+role: Contractor
 ---
 See [Contracts][1] section
 
