--- a/_testjobs/2011-JPM.md
+++ b/_testjobs/2011-JPM.md
@@ -1,10 +1,13 @@
 ---
     type: contract
-    contracts:
-    - 2011–2012 JPMorgan, System Integration and Test Engineer — Futures and Options
-    - 2010–2011 JPMorgan, System Integration and Test Engineer — Futures and Options
-    - 2006–2009 JPMorgan, System Integration and Test Engineer — Futures and Options
-    - 2000–2003 JPMorgan, System Integration and Test Engineer — Futures and Options
+    who: JPMorgan
+    role: System Integration and Test Engineer
+    team: Futures and Options
+    when:
+    - 2011–2012
+    - 2010–2011
+    - 2006–2009
+    - 2000–2003
     skills:
     - Perl, Ksh, Bash.
     - Sungard Valdi Trader suite, GLWin, GLAPI.
