--- a/_testjobs/2013-ttp.md
+++ b/_testjobs/2013-ttp.md
@@ -1,6 +1,8 @@
 ---
 type: permanent
-role: 2013–2015 The Test People, Senior Test Consultant
+who: The Test People
+role: Senior Test Consultant
+when: 2013–2015 
 skills:
     - Selenium Webdriver.
     - Java, Python, Bash.
