--- a/_testjobs/2019-Jet2.md
+++ b/_testjobs/2019-Jet2.md
@@ -1,14 +1,16 @@
 ---
 type: permanent
-who: Iliad Solutions
-role: Test Analyst
-team: T3 Switch payments testing and simulation tool
 when:
-    - 2016&ndash;2019
+    - 2019&ndash;present
+    - 2017&ndash;2018
+who: Jet2
+role: Senior Tester
+team: Business Inteligence
+
 skills:
-    - Java, Python, Selenium, Postman, Newman.
-    - AWS, EC2, RDS, Docker, Jenkins.
-    - MySQL, PostgreSQL, Oracle.
+    - DBT, SQL, Python.
+    - Azure Devops, GCP.
+    - Snowflake, MS SQL Server.
 ---
 Enhanced automated test framework adding REST API querying on top of Selenium and SQL. This simplified the insertion of data across multiple databases and reduced the time to gather results. Created libraries for efficiently extracting and filtering data from multi-page web result tables speeding test execution time.
 
